[package]

name = "yaxpeax-mips"
version = "0.0.3"
authors = [ "iximeow <me@iximeow.net>" ]
license = "0BSD"
repository = "http://git.iximeow.net/yaxpeax-mips/"
description = "mips decoders for the yaxpeax project"

[dependencies]
yaxpeax-arch = { version = "0.0.4", default-features = false, features = [] }
"serde" = { version = "1.0", optional = true }
"serde_derive" = { version = "1.0", optional = true }
"num_enum" = { version = "0.2", default-features = false }

[[test]]
name = "test"
path = "test/test.rs"

[features]
default = []

use-serde = []

colors = ["yaxpeax-arch/colors"]
